--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "babel-polyfill": "^6.23.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.22.0",
     "concurrently": "^3.4.0",
     "cross-env": "^3.2.3",
     "css-loader": "^0.26.2",
